# rag_engine_lib

./: README.md  pyproject.toml
examples/: basic_query.py  ingest_pdfs.py  streamlit_app.py
rag_engine/: __init__.py  chain_factory.py  config.py  engine.py  llm_factory.py  models.py  prompts.py  retriever_factory.py
rag_engine/_internal/: doc_formatter.py
rag_engine/ingestion/: __init__.py  ingester.py
rag_engine/vectordb/: __init__.py  base.py  chroma_provider.py  pinecone_provider.py
tests/: test_config.py  test_engine.py  test_models.py
